# geo-dl-model

./: .gitignore  ReadMe.md  dataset.py  eval.py  main.py  model.py  pyproject.toml  trainer.py
config/: global_mean_std.yaml
utils/: calculate_training_mean_std.py  create_evaluation_plots.py  create_h5_test_subset_dynamic_files.py  create_h5_train_subset_dynamic_files.py  helper_functions.py
